<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnBindService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnUnBindService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnCallServiceMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_serviceMethod"
        android:textAllCaps="false"/>
</LinearLayout>