<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnUnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unregister"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnSendBroadCast1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendbroadcast1"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnSendBroadCast2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendbroadcast2"
        android:textAllCaps="false"/>

</LinearLayout>